--- a/template.html
+++ b/template.html
@@ -10,8 +10,69 @@
 
         <h1>Model 1</h1>
 
-        
-
+        <h2>Table 1</h2>
+        <div> 
+            <table class="texreg" style="margin: 10px auto;border-collapse: collapse;border-spacing: 0px;caption-side: bottom;color: #000000;border-top: 2px solid #000000;">
+            <caption>Statistical models</caption>
+            <thead>
+            <tr>
+            <th style="padding-left: 5px;padding-right: 5px;">&nbsp;</th>
+            <th style="padding-left: 5px;padding-right: 5px;">Model 1</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr style="border-top: 1px solid #000000;">
+            <td style="padding-left: 5px;padding-right: 5px;">(Intercept)</td>
+            <td style="padding-left: 5px;padding-right: 5px;">-0.01<sup>&#42;</sup></td>
+            </tr>
+            <tr>
+            <td style="padding-left: 5px;padding-right: 5px;">&nbsp;</td>
+            <td style="padding-left: 5px;padding-right: 5px;">[-0.01; -0.00]</td>
+            </tr>
+            <tr>
+            <td style="padding-left: 5px;padding-right: 5px;">GPCP_g</td>
+            <td style="padding-left: 5px;padding-right: 5px;">0.06<sup>&#42;</sup></td>
+            </tr>
+            <tr>
+            <td style="padding-left: 5px;padding-right: 5px;">&nbsp;</td>
+            <td style="padding-left: 5px;padding-right: 5px;">[ 0.02;  0.09]</td>
+            </tr>
+            <tr>
+            <td style="padding-left: 5px;padding-right: 5px;">GPCP_g_l</td>
+            <td style="padding-left: 5px;padding-right: 5px;">0.03<sup>&#42;</sup></td>
+            </tr>
+            <tr>
+            <td style="padding-left: 5px;padding-right: 5px;">&nbsp;</td>
+            <td style="padding-left: 5px;padding-right: 5px;">[ 0.01;  0.06]</td>
+            </tr>
+            <tr style="border-top: 1px solid #000000;">
+            <td style="padding-left: 5px;padding-right: 5px;">R<sup>2</sup></td>
+            <td style="padding-left: 5px;padding-right: 5px;">0.02</td>
+            </tr>
+            <tr>
+            <td style="padding-left: 5px;padding-right: 5px;">Adj. R<sup>2</sup></td>
+            <td style="padding-left: 5px;padding-right: 5px;">0.02</td>
+            </tr>
+            <tr>
+            <td style="padding-left: 5px;padding-right: 5px;">Num. obs.</td>
+            <td style="padding-left: 5px;padding-right: 5px;">743</td>
+            </tr>
+            <tr>
+            <td style="padding-left: 5px;padding-right: 5px;">RMSE</td>
+            <td style="padding-left: 5px;padding-right: 5px;">0.07</td>
+            </tr>
+            <tr style="border-bottom: 2px solid #000000;">
+            <td style="padding-left: 5px;padding-right: 5px;">N Clusters</td>
+            <td style="padding-left: 5px;padding-right: 5px;">41</td>
+            </tr>
+            </tbody>
+            <tfoot>
+            <tr>
+            <td style="font-size: 0.8em;" colspan="2"><sup>&#42;</sup> 0 outside the confidence interval.</td>
+            </tr>
+            </tfoot>
+            </table>
+        </div>
     </body>
 
 </html>
