Cambios en branch update

--- a/template.html
+++ b/template.html
@@ -10,7 +10,12 @@
 
         <h1>Model 1</h1>
 
+        
+
         <h2>Table 1</h2>
+
+        <h3>Regresión ligistica y OLS</h3>
+
         <div> 
             <table class="texreg" style="margin: 10px auto;border-collapse: collapse;border-spacing: 0px;caption-side: bottom;color: #000000;border-top: 2px solid #000000;">
             <caption>Statistical models</caption>
