Cambios en la nube

--- a/template.html
+++ b/template.html
@@ -16,6 +16,8 @@
 
         <h3>Regresión ligistica y OLS</h3>
 
+        <h3>Commit con el repositorio en la nube</h3>
+
         <div> 
             <table class="texreg" style="margin: 10px auto;border-collapse: collapse;border-spacing: 0px;caption-side: bottom;color: #000000;border-top: 2px solid #000000;">
             <caption>Statistical models</caption>
